log/build_2025-02-07_18-24-09/ar_loc_base/stderr.log
  File "/home/GTL/pcastere/ros_hw1/ros2_hw1/install/ar_loc_base/lib/python3.10/site-packages/ar_loc_base/rover_pf.py", line 45
    new_X = array([x + dx_world ; y + dy_world; theta  + dtheta]) + noise
                                ^
SyntaxError: invalid syntax

